<resources>

    <string name="text_edit">Редактировать</string>
    <string name="text_data">Дата</string>
    <string name="text_nav_header_username">local</string>
    <string name="text_nav_header_user_email">local@local.ru</string>
    <string name="text_nav_header_desc">Navigation header</string>
    <string name="text_wallet_activity_label">WalletActivity</string>
    <string name="text_log_in">Войти</string>
    <string name="text_registration">Регистрация</string>
    <string name="text_continue_local">Продолжить локально</string>
    <string name="text_app_name">Мой кошелёк</string>
    <string name="text_revenue">Доходы</string>
    <string name="text_expenses">Расходы</string>
    <string name="text_currency_russian_ruble">Российский рубль</string>
    <string name="text_currency_dollar_usa">Доллар США</string>
    <string name="text_currency_euro">Евро</string>
    <string name="text_currency_turkish_lira">Турецкая лира</string>
    <string name="text_currency_russian_ruble_with_colon">Российский рубль:\u0020</string>
    <string name="text_currency_dollar_usa_with_colon">Доллар США:\u0020</string>
    <string name="text_currency_euro_with_colon">Евро:\u0020</string>
    <string name="text_currency_turkish_lira_with_colon">Турецкая лира:\u0020</string>
    <string name="text_about_app">О приложении</string>
    <string name="text_about_app_text">Описание приложения</string>
    <string name="text_home">Главная</string>
    <string name="text_calc_currency">Калькулятор валют</string>
    <string name="text_settings">Настройки</string>
    <string name="text_about_user">О пользователе</string>
    <string name="text_category">Категория</string>
    <string name="text_add">Добавить</string>
    <string name="text_select_date">Выберите дату</string>
    <string name="text_value">Сумма</string>
    <string name="text_input_value">Укажите сумму</string>
    <string name="text_currency">Валюта</string>
    <string name="text_storage_location">Место хранения</string>
    <string name="text_description">Описание</string>
    <string name="text_save">Сохранить</string>
    <string name="text_save_question">Сохранить?</string>
    <string name="text_save_input_data_question">Сохранить введенные данные?</string>
    <string name="text_yes">Да</string>
    <string name="text_no">Нет</string>
    <string name="text_update_exchange_rate">Обновить курс</string>
    <string name="text_categories_revenue">Категории доходов</string>
    <string name="text_categories_expenses">Категории расходов</string>
    <string name="text_storage_locations">Места хранения</string>
    <string name="text_username">Имя пользователя</string>
    <string name="text_username_with_colon">Имя пользователя: </string>
    <string name="text_user_email">Email</string>
    <string name="text_user_email_with_colon">Email: </string>
    <string name="text_password">Пароль</string>
    <string name="text_log_out">Выйти</string>
    <string name="text_change_password">Сменить пароль</string>
    <string name="text_delete_account">Удалить аккаунт</string>
    <string name="text_russian_ruble_symbol">₽</string>
    <string name="text_dollar_usa_symbol">$</string>
    <string name="text_euro_symbol">€</string>
    <string name="text_turkish_lira_symbol">₺</string>
    <string name="text_salary">Зарплата</string>
    <string name="text_stocks">Акции</string>
    <string name="text_flat">Квартира</string>
    <string name="text_wallet">Кошелёк</string>
    <string name="text_bank">Банк</string>
    <string name="text_safe">Сейф</string>
    <string name="text_products">Продукты</string>
    <string name="text_lessons">Занятия</string>
    <string name="text_rename_elem">Переименовать элемент</string>
    <string name="text_input_new_name_max_32_symbols">Введите новвое название(макс. 32 символа)</string>
    <string name="text_delete_elem">Удалить элемент</string>
    <string name="text_delete">Удалить</string>
    <string name="text_delete_category_warning">Будут удалены все элементы с этой категорией</string>
    <string name="text_delete_storage_location_warning">Будут удалены все элементы, в которых указано данное место хранения</string>
    <string name="text_current_exchange_rate">Текущий курс\nк Российскому рублю</string>

</resources>