<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/text_home" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/text_revenue" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_expenses" />
        <item
            android:id="@+id/nav_calc_currency"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_calc_currency" />
        <item
            android:id="@+id/nav_settings"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_settings" />
        <item
            android:id="@+id/nav_userdata"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/text_about_user" />
    </group>
</menu>