<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.snail.wallet.MainScreen.ui.home.HomeFragment"
        android:label="@string/text_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_gallery"
        android:name="com.snail.wallet.MainScreen.ui.revenue.RevenueFragment"
        android:label="@string/text_revenue"
        tools:layout="@layout/fragment_revenue" />

    <fragment
        android:id="@+id/nav_slideshow"
        android:name="com.snail.wallet.MainScreen.ui.expenses.ExpensesFragment"
        android:label="@string/text_expenses"
        tools:layout="@layout/fragment_expenses" />

    <fragment
        android:id="@+id/nav_calc_currency"
        android:name="com.snail.wallet.MainScreen.ui.calcCurrency.CalcCurrencyFragment"
        android:label="@string/text_calc_currency"
        tools:layout="@layout/fragment_calc_currency" />

    <fragment
        android:id="@+id/nav_settings"
        android:name="com.snail.wallet.MainScreen.ui.settings.SettingsFragment"
        android:label="@string/text_settings"
        tools:layout="@layout/fragment_settings" />

    <fragment
        android:id="@+id/nav_userdata"
        android:name="com.snail.wallet.MainScreen.ui.userdata.UserDataFragment"
        android:label="@string/text_about_user"
        tools:layout="@layout/fragment_userdata" />
</navigation>