<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constrainLayoutAddActivityMainLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_main_color"
    tools:context=".MainScreen.activities.AddActivity">

    <TextView
        android:id="@+id/textViewAddActivityCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_category"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Spinner
        android:id="@+id/spinnerAddActivityCategory"
        android:layout_width="@dimen/width_large_spinner"
        android:layout_height="@dimen/height_large_spinner"
        android:layout_marginStart="@dimen/margin_small"
        android:contentDescription="@string/text_categories_revenue"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityCategory"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/buttonAddActivityAddCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/text_add"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toEndOf="@+id/spinnerAddActivityCategory"
        app:layout_constraintTop_toTopOf="@+id/spinnerAddActivityCategory"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewAddActivityDateSelect"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_small"
        android:layout_marginTop="@dimen/margin_tiny"
        android:text="@string/text_select_date"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAddActivityCategory"
        app:layout_constraintVertical_bias="0.018" />

    <TextView
        android:id="@+id/textViewAddActivityDateSelector"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:textSize="@dimen/text_size_large"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityDateSelect" />

    <TextView
        android:id="@+id/textViewAddActivityValue"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_value"
        android:textColor="#33691E"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityDateSelector" />

    <EditText
        android:id="@+id/editTextNumberAddActivityValue"
        android:layout_width="@dimen/width_value_editText"
        android:layout_height="@dimen/height_value_editText"
        android:layout_marginStart="16dp"
        android:autofillHints="creditCardNumber"
        android:ems="10"
        android:hint="@string/text_value"
        android:inputType="number|textMultiLine"
        android:maxLength="10"
        android:minHeight="@dimen/height_min_editText"
        android:textColorHint="#33691E"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityValue"
        tools:ignore="LabelFor,DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewAddActivityCurrency"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_currency"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberAddActivityValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityDateSelector" />

    <Spinner
        android:id="@+id/spinnerAddActivityCurrency"
        android:layout_width="@dimen/width_small_spinner"
        android:layout_height="@dimen/height_small_spinner"
        android:layout_marginStart="@dimen/margin_tiny"
        android:contentDescription="@string/text_currency"
        app:layout_constraintStart_toEndOf="@+id/editTextNumberAddActivityValue"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityCurrency"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <TextView
        android:id="@+id/textViewAddActivityStorageLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="@dimen/margin_small"
        android:text="@string/text_storage_location"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextNumberAddActivityValue" />

    <Spinner
        android:id="@+id/spinnerAddActivityStorageLocation"
        android:layout_width="@dimen/width_large_spinner"
        android:layout_height="@dimen/height_large_spinner"
        android:layout_marginStart="16dp"
        android:contentDescription="@string/text_storage_location"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textViewAddActivityStorageLocation"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <Button
        android:id="@+id/buttonAddActivityAddStorageLocation"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/margin_tiny"
        android:layout_marginEnd="@dimen/margin_small"
        android:text="@string/text_add"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/spinnerAddActivityStorageLocation"
        app:layout_constraintTop_toTopOf="@+id/spinnerAddActivityStorageLocation" />

    <EditText
        android:id="@+id/editTextAddActivityTextDescription"
        android:layout_width="0dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/text_description"
        android:inputType="textPersonName|textMultiLine"
        android:maxLength="128"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerAddActivityStorageLocation" />

    <Button
        android:id="@+id/buttonAddActivitySave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_save"
        android:textSize="@dimen/text_size_tiny"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddActivityTextDescription"
        app:layout_constraintVertical_bias="0.126" />
</androidx.constraintlayout.widget.ConstraintLayout>